--- a/acrea/src/index.css
+++ b/acrea/src/index.css
@@ -2,14 +2,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* border: 0.5px black solid; */
+    border: 0.5px black solid;
 }
 
-div{
+div {
     display: flex;
 }
 
 p {
     margin: 0px;
     padding: 0px;
+}
+
+.screen {
+    min-height: 100vh;
+    width: 100%;
 }
