--- a/acrea/src/index.css
+++ b/acrea/src/index.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    border: 0.5px black solid;
+    /* border: 0.5px black solid; */
 }
 
 div {
