--- a/acrea/src/components/css/Header.module.css
+++ b/acrea/src/components/css/Header.module.css
@@ -7,6 +7,7 @@
     padding-bottom: .5rem;
     flex-direction: row;
     justify-content: space-between;
+    z-index: 10;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
