--- a/acrea/src/views/Dashboard/css/Dashboard.module.css
+++ b/acrea/src/views/Dashboard/css/Dashboard.module.css
@@ -92,3 +92,27 @@
     align-items: center;
     gap: .2rem;
 }
+
+
+
+
+
+.recentProp{
+    flex-direction: column;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    align-items: center;
+    
+}
+.recentPropContainer{
+    width: 100%;
+    padding: 1rem;
+    justify-content: space-evenly;
+}
+.recentPropCard{
+        width: 20%;
+        flex-direction: column;
+        border-radius: 15px;
+        overflow: hidden;
+        box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+}
