--- a/acrea/src/views/PropertyPage/css/PropertyPage.module.css
+++ b/acrea/src/views/PropertyPage/css/PropertyPage.module.css
@@ -94,8 +94,9 @@ a {
 }
 
 .propertyType {
-  color: gray;
+  /* color: gray; */
   margin-bottom: 1rem;
+  font-weight:bold;
 }
 
 .propertyDetails h1 {
@@ -248,6 +249,14 @@ a {
   margin-right: 0.5rem;
 }
 
+.editBtn{
+  background-color: #1e3a8a;
+   width:20rem;
+   font-weight: bold;
+}
+.editBtn:hover{
+  background-color: #0e2a6b;
+}
 
 
 
