changed input fields

--- a/acrea/src/views/AddProperty/css/AddProperty.module.css
+++ b/acrea/src/views/AddProperty/css/AddProperty.module.css
@@ -57,6 +57,9 @@
   .locationGroup  input {
     margin-bottom: 10px;
   }
+  .stateOption{
+    margin-bottom: 10px;
+  }
   .flexRow {
     display: flex;
     justify-content: space-between;
