Added or remove Input field in Add Property and Edit Property

--- a/acrea/src/views/AddProperty/css/AddProperty.module.css
+++ b/acrea/src/views/AddProperty/css/AddProperty.module.css
@@ -126,4 +126,16 @@
   .amenitiesGrid input {
     margin-right: 8px;
   }
+
+  .selectAllContainer {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+
+  .selectAllLabel {
+    margin-left: 1px;
+    font-weight: 500;
+    cursor: pointer;
+  }
   
