--- a/acrea/src/components/css/Footer.module.css
+++ b/acrea/src/components/css/Footer.module.css
@@ -1,26 +1,25 @@
 footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: auto;
-    position: relative;
-    padding: 16px;
-    background-color: #f5f7fa; /* Light gray background */
-    border-top: 1px solid #e5e7eb; /* Border at the top */
-  }
-  
-  footer a {
-    color:#BC0000; /* Red color for links */
-    text-decoration: none;
-  }
-  
-  footer a:hover {
-    text-decoration: underline;
-  }
-  
-  footer img {
-    width: 24px; /* Icon size */
-    height: 24px;
-    margin-right: 8px; /* Space between icon and text */
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: auto;
+  position: relative;
+  padding: 16px;
+  background-color: #f5f7fa;
+  border-top: 1px solid #e5e7eb;
+}
+
+footer a {
+  color:#BC0000;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
+.ftimg {
+  width: 2rem;
+  height: 2rem;
+  margin-right: 8px;
+}
