--- a/acrea/src/views/PropertyPage/css/PropertyPage.module.css
+++ b/acrea/src/views/PropertyPage/css/PropertyPage.module.css
@@ -335,3 +335,18 @@ a {
   display: grid;
   flex-direction: column;
 }
+
+.imageSection {
+  margin: 2rem 0;
+  padding: 1rem;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  display: flex;
+  flex-direction: column;
+  /* height: 40rem; */
+}
+
+.imageSection h3 {
+  margin-bottom: 1rem;
+}
