--- a/acrea/src/views/PropertyPage/css/PropertyPage.module.css
+++ b/acrea/src/views/PropertyPage/css/PropertyPage.module.css
@@ -120,7 +120,6 @@ a {
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-top: 1.5rem;
-  
   display: flex;
   flex-direction: column;
 }
@@ -334,6 +333,7 @@ a {
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
   display: grid;
   flex-direction: column;
+  min-height: fit-content;
 }
 
 .imageSection {
